compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__traits__typech_trait_missing_method.snap
---
source: compiler/lume_typech/src/tests/check/traits.rs
description: "struct A { }\n\n        trait Foo {\n            fn foo();\n        }\n\n        use Foo in A { }"
---
× error[LM4161]: missing method in implementation
   ╭───────────
 6 │ 
 7 │         use Foo in A { }
   │         ^^^^^^^^^^^^^^^^ trait implementation does not implement method foo
   ╰──
